--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
       <label for="resume" class="link-button">Upload new resume</label>
       <input type="file" id="resume" accept=".pdf,.doc,.docx" style="display: none;">
     </div>
-    <button id="analyze">Analyze Resume for this Job</button>
+    <button id="analyze">Analyze Resume</button>
     <div id="analysis" class="hidden">
       <!-- Analysis results will be displayed here -->
     </div>
