--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>JobFit AI</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+  <div
+    class="background-parent-div">
+    <div
+      class="background-div">
+    </div>
+  </div>
   <h1>JobFit AI</h1>
 
   <div id="apiKeySetup">
@@ -22,7 +30,8 @@
     <ol>
       <li>Go to <a href="https://aistudio.google.com/app/apikey" target="_blank">Google AI Studio</a>.</li>
       <li>Sign in with your Google account.</li>
-      <li>Click on <strong>"Get API key in a new project"</strong> or <strong>"Create API key"</strong> if you have an existing project.</li>
+      <li>Click on <strong>"Get API key in a new project"</strong> or <strong>"Create API key"</strong> if you have an
+        existing project.</li>
       <li>Copy the generated API key.</li>
       <li>Paste the API key into the field above and click "Save Key".</li>
     </ol>
@@ -44,4 +53,5 @@
 
   <script src="popup.js"></script>
 </body>
+
 </html>
