add logo and fix styling

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
       class="background-div">
     </div>
   </div>
-  <h1>JobFit AI</h1>
+  <h1 class="logo-container"><img src="assets/logo.png" alt="JobFit AI Logo" class="logo"></h1>
 
   <div id="apiKeySetup">
     <div class="input-group">
